--- a/styles/sass/views/_768.sass
+++ b/styles/sass/views/_768.sass
@@ -205,6 +205,9 @@ footer
 		li
 			@include span(3 of 12)
 			margin-bottom: 0
+			&:first-child
+				.count
+					margin-top: 0
 			.step
 				position: relative
 				width: 100%
